--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.2.10
 Django==3.1.1
 django-cors-headers==3.5.0
 django-filter==2.4.0
+django-nested-inline==0.4.2
 djangorestframework==3.12.0
 importlib-metadata==2.0.0
 Markdown==3.2.2
