--- a/react_app/package.json
+++ b/react_app/package.json
@@ -1,4 +1,4 @@
-{ 
+{
   "name": "react_app",
   "version": "0.1.0",
   "private": true,
@@ -10,6 +10,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
+    "react-vis": "^1.11.7",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
