--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,22 @@
 asgiref==3.2.10
+astroid==2.4.2
+colorama==0.4.4
 Django==3.1.1
 django-cors-headers==3.5.0
 django-filter==2.4.0
 django-nested-inline==0.4.2
 djangorestframework==3.12.0
+djangorestframework-simplejwt==4.4.0
 importlib-metadata==2.0.0
+isort==5.6.4
+lazy-object-proxy==1.4.3
 Markdown==3.2.2
+mccabe==0.6.1
+PyJWT==1.7.1
 pytz==2020.1
+six==1.15.0
 sqlparse==0.3.1
+toml==0.10.2
+typed-ast==1.4.1
+wrapt==1.12.1
 zipp==3.2.0
