--- a/react_app/package.json
+++ b/react_app/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
     "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-full-screen": "^0.3.1",
     "react-router": "^5.2.0",
