--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,10 @@
-asgiref==3.3.1
-astroid==2.5
-colorama==0.4.4
-Django==3.1.7
-django-cors-headers==3.7.0
-django-filter==2.4.0
-djangorestframework==3.12.2
-djangorestframework-simplejwt==4.6.0
-importlib-metadata==3.4.0
-isort==5.7.0
-lazy-object-proxy==1.5.2
-Markdown==3.3.3
-mccabe==0.6.1
-psycopg2==2.8.6
-PyJWT==2.0.1
-pytz==2021.1
-six==1.15.0
-sqlparse==0.4.1
-toml==0.10.2
-typed-ast==1.4.2
-wrapt==1.12.1
-zipp==3.4.0
+asgiref==3.5.2
+Django==4.0.6
+django-cors-headers==3.13.0
+djangorestframework==3.13.1
+djangorestframework-simplejwt==5.2.0
+psycopg2==2.9.3
+PyJWT==2.4.0
+pytz==2022.1
+sqlparse==0.4.2
+tzdata==2022.1
