--- a/react_app/package.json
+++ b/react_app/package.json
@@ -15,12 +15,12 @@
     "react-full-screen": "^0.3.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^2.1.3",
     "react-vis": "^1.11.7",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
